--- a/_config.yml
+++ b/_config.yml
@@ -3,14 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: 곽승옥
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: 호기심 많은 취업준비생
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
-
+avatar: https://mblogthumb-phinf.pstatic.net/MjAxNzA1MTFfNzQg/MDAxNDk0NDc5MTcwOTky.zuvG9209JWR0EGFntbJfKTgbPl1IAMX9Q66OI1zicEgg.cwYh3Z-xnkg39iRLRaZOZMq2EW_mAs1Y8qNNRLmLqycg.PNG.fourmentrading/image_8903015491494478733880.png?type=w800
 #
 # Flags below are optional
 #
